Added filtering for all pages where CRUD operations are implemented
